--- a/railway.toml
+++ b/railway.toml
@@ -10,3 +10,5 @@ restartPolicyMaxRetries = 3
 [env]
 PYTHONUNBUFFERED = "1"
 FLASK_ENV = "development"
+ASSEMBLYAI_API_KEY = "YOUR_ASSEMBLYAI_API_KEY"
+GROQ_API_KEY = "YOUR_GROQ_API_KEY"
